--- a/templates/index.html
+++ b/templates/index.html
@@ -208,7 +208,7 @@
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h6 class="section-title bg-white text-center text-primary px-3">หมวดหมู่</h6>
-                <h1 class="mb-5">หมวดหมู่บทความเกี่ยวกับการเลี้ยงลูกด้วยนมแม่</h1>
+                <h1 class="mb-5">บทความเกี่ยวกับการเลี้ยงลูกด้วยนมแม่</h1>
             </div>
             <div class="row g-3">
                 <div class="col-lg-7 col-md-6">
@@ -217,8 +217,8 @@
                             <a class="position-relative d-block overflow-hidden" href="">
                                 <img class="img-fluid" src="{% static 'img/cat-1.jpg' %}" alt="">
                                 <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin: 1px;">
-                                    <h5 class="m-0">Web Design</h5>
-                                    <small class="text-primary">49 Courses</small>
+                                    <h5 class="m-0">เตรียมตัวมีลูก</h5>
+                                    <small class="text-primary"></small>
                                 </div>
                             </a>
                         </div>
@@ -226,8 +226,8 @@
                             <a class="position-relative d-block overflow-hidden" href="">
                                 <img class="img-fluid" src="{% static 'img/cat-2.jpg' %}" alt="">
                                 <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin: 1px;">
-                                    <h5 class="m-0">Graphic Design</h5>
-                                    <small class="text-primary">49 Courses</small>
+                                    <h5 class="m-0">เตรียมตัวตั้งครรภ์</h5>
+                                    <small class="text-primary"></small>
                                 </div>
                             </a>
                         </div>
@@ -235,8 +235,8 @@
                             <a class="position-relative d-block overflow-hidden" href="">
                                 <img class="img-fluid" src="{% static 'img/cat-3.jpg' %}" alt="">
                                 <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin: 1px;">
-                                    <h5 class="m-0">Video Editing</h5>
-                                    <small class="text-primary">49 Courses</small>
+                                    <h5 class="m-0">การเลี้ยงลูกด้วยนมแม่</h5>
+                                    <small class="text-primary"></small>
                                 </div>
                             </a>
                         </div>
@@ -246,8 +246,8 @@
                     <a class="position-relative d-block h-100 overflow-hidden" href="">
                         <img class="img-fluid position-absolute w-100 h-100" src="{% static 'img/cat-4.jpg' %}" alt="" style="object-fit: cover;">
                         <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin:  1px;">
-                            <h5 class="m-0">Online Marketing</h5>
-                            <small class="text-primary">49 Courses</small>
+                            <h5 class="m-0">การให้นมบุตร</h5>
+                            <small class="text-primary"></small>
                         </div>
                     </a>
                 </div>
@@ -261,8 +261,8 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Courses</h6>
-                <h1 class="mb-5">Popular Courses</h1>
+                <h6 class="section-title bg-white text-center text-primary px-3">ความรู้</h6>
+                <h1 class="mb-5">บทความล่าสุด</h1>
             </div>
             <div class="row g-4 justify-content-center">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -359,8 +359,8 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Instructors</h6>
-                <h1 class="mb-5">Expert Instructors</h1>
+                <h6 class="section-title bg-white text-center text-primary px-3">ทีมงาน</h6>
+                <h1 class="mb-5">ทีมงานการเลี้ยงลูกด้วยนมแม่</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -376,7 +376,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Instructor Name</h5>
+                            <h5 class="mb-0">นักวิชาการ</h5>
                             <small>Designation</small>
                         </div>
                     </div>
@@ -394,7 +394,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Instructor Name</h5>
+                            <h5 class="mb-0">พยาบาล</h5>
                             <small>Designation</small>
                         </div>
                     </div>
@@ -412,7 +412,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Instructor Name</h5>
+                            <h5 class="mb-0">อ.ส.ม.</h5>
                             <small>Designation</small>
                         </div>
                     </div>
@@ -430,7 +430,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Instructor Name</h5>
+                            <h5 class="mb-0">ผู้เชี่ยวชาญ</h5>
                             <small>Designation</small>
                         </div>
                     </div>
@@ -440,8 +440,8 @@
     </div>
     <!-- Team End -->
 
-
-    <!-- Testimonial Start -->
+<!--
+     Testimonial Start
     <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container">
             <div class="text-center">
@@ -484,8 +484,9 @@
             </div>
         </div>
     </div>
-    <!-- Testimonial End -->
-        
+
+     Testimonial End -->
+-->   
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
@@ -500,9 +501,9 @@
                     <a class="btn btn-link" href="">FAQs & Help</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Contact</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+                    <h4 class="text-white mb-3">ติดต่อเรา</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 หมู่ 1 ตำบลท่าแซะ อำเภอท่าแซะ จังหวัดชุมพร</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+077 345 67890</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
@@ -512,7 +513,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Gallery</h4>
+                    <h4 class="text-white mb-3">คลังภาพ</h4>
                     <div class="row g-2 pt-2">
                         <div class="col-4">
                             <img class="img-fluid bg-light p-1" src="{% static 'img/course-1.jpg' %}" alt="">
@@ -534,7 +535,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <!--<div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Newsletter</h4>
                     <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
@@ -542,19 +543,21 @@
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
                 </div>
+                 -->
             </div>
         </div>
         <div class="container">
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="#">การเลี้ยงลูกด้วยนมแม่</a>, All Right Reserved.
 
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
+                        <!--Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
                         Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
+                        -->
                     </div>
-                    <div class="col-md-6 text-center text-md-end">
+                   <!--<div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
                             <a href="">Home</a>
                             <a href="">Cookies</a>
@@ -562,6 +565,7 @@
                             <a href="">FQAs</a>
                         </div>
                     </div>
+                    -->
                 </div>
             </div>
         </div>
