--- a/templates/index.html
+++ b/templates/index.html
@@ -173,6 +173,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start text-primary pe-3">เกี่ยวกับเรา</h6>
                     <h1 class="mb-4">การเลี้ยงลูกด้วยนมแม่</h1>
+                    <p>นายกฤษฎา พรหมภากร ประธาน อ.ส.ม. หมู่ที่ 5 โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านคุริง</p>
                     <p class="mb-4">องค์การอนามัยโลก (WHO) และยูนิเซฟ แนะนำว่าลูกควรได้กินนมแม่อย่างเดียว ตั้งแต่แรกเกิดถึง 6 เดือน และควรกินต่อเนื่องไปจนลูกอายุ 2 ปี หรือนานกว่านั้น ควบคู่กับอาหารตามวัยที่เหมาะสม</p>
                     <p class="mb-4">เนื่องจากนมแม่เป็นอาหารที่เหมาะสมที่สุดสำหรับลูกด้วยองค์ประกอบด้านโภชนาการ การเสริมสร้างภูมิคุ้มกัน สารต่อต้านอนุมูลอิสระ วิตามินและยังมีเซลล์สิ่งมีชีวิตต่างๆ ทั้งจากเซลล์จากแม่ รวมถึงแบคทีเรียที่ดีต่อระบบทางเดินอาหารของลูกด้วย</p>
                     <div class="row gy-2 gx-4 mb-4">
@@ -372,7 +373,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="{% static 'img/team1.jpg' %}" alt="">
+                            <img class="img-fluid" src="{% static 'img/prach.jpg' %}" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -502,7 +503,7 @@
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-6 col-md-6">
                     <h4 class="text-white mb-3">ลิงค์ภายใน</h4>
                     <a class="btn btn-link" href="">เกี่ยวกับเรา</a>
                     <a class="btn btn-link" href="">ติดต่อเรา</a>
@@ -510,19 +511,19 @@
                     <a class="btn btn-link" href="">วิสัยทัศน์พันธกิจ</a>
                     <a class="btn btn-link" href="">คำถามบ่อย</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-6 col-md-6">
                     <h4 class="text-white mb-3">ติดต่อเรา</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านคุริง ตำบลทรัพอนันต์ อำเภอท่าแซะ จังหวัดชุมพร</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+077 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+077 077 651 774</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>pruch2514pruch01@gmail.com</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <!--<a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>-->
+                        <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/nxng.taw.lek.dek.haw.khong"><i class="fab fa-facebook-f"></i></a>
+                        <!--<a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>-->
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+               <!-- <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">คลังภาพกิจกรรม</h4>
                     <div class="row g-2 pt-2">
                         <div class="col-4">
@@ -545,6 +546,7 @@
                         </div>
                     </div>
                 </div>
+            -->
                 <!--<div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Newsletter</h4>
                     <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
