--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap" rel="stylesheet">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet">
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -30,6 +34,61 @@
 
     <!-- Template Stylesheet -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <style>
+        nav form {
+            font-family: sans-serif;
+        }
+
+        nav a {
+            font-family: sans-serif;
+        }
+
+        .container {
+            font-family: sans-serif;
+        }
+
+        .container div,
+        h1 {
+            font-family: sans-serif;
+            font-weight: 600;
+        }
+
+
+
+        .pagination>li>a {
+            background-color: white;
+            color: #5A4181;
+        }
+
+        .pagination>li>a:focus,
+        .pagination>li>a:hover,
+        .pagination>li>span:focus,
+        .pagination>li>span:hover {
+            color: #fff;
+            background-color: #5a5a5a;
+            border-color: #ddd;
+        }
+
+        .pagination>.active>a {
+            color: white;
+            background-color: #5a5a5a !Important;
+            border: solid 1px #5a5a5a !Important;
+        }
+
+        .pagination>.active>a:hover {
+            background-color: #5A4181 !Important;
+            border: solid 1px #5A4181;
+        }
+        .image-container {
+            height: 100%;
+            overflow: hidden;
+        }
+        .image-container img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
+    </style>
 </head>
 
 <body>
@@ -87,11 +146,11 @@
             <div class="row g-5">
                 <div class="col-lg-6 col-md-6">
                     <h4 class="text-white mb-3">ลิงค์ภายใน</h4>
-                    <a class="btn btn-link" href="">เกี่ยวกับเรา</a>
-                    <a class="btn btn-link" href="">ติดต่อเรา</a>
+                    <a class="btn btn-link" href="{% url 'about' %}">เกี่ยวกับเรา</a>
+                    <a class="btn btn-link" href="{% url 'contact' %}">ติดต่อเรา</a>
                     <a class="btn btn-link" href="">บทความ</a>
-                    <a class="btn btn-link" href="">วิสัยทัศน์พันธกิจ</a>
-                    <a class="btn btn-link" href="">คำถามบ่อย</a>
+                    <!--<a class="btn btn-link" href="">วิสัยทัศน์พันธกิจ</a>-->
+                    <a class="btn btn-link" href="#">คำถามบ่อย</a>
                 </div>
                 <div class="col-lg-6 col-md-6">
                     <h4 class="text-white mb-3">ติดต่อเรา</h4>
