--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>เลี้ยงลูกนมแม่</title>
+    <title>{% block title%}{% endblock title%} </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -111,9 +111,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">หน้าหลัก</a>
-                <a href="about.html" class="nav-item nav-link">เกี่ยวกับเรา</a>
-                <a href="courses.html" class="nav-item nav-link">การเลี้ยงลูกด้วยนมแม่</a>
+                <a href="{% url 'index' %}" class="nav-item nav-link active">หน้าหลัก</a>
+                <a href="{% url 'about' %}" class="nav-item nav-link">เกี่ยวกับเรา</a>
+                <a href="{% url 'home' %}" class="nav-item nav-link">การเลี้ยงลูกด้วยนมแม่</a>
                 <!--<div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu fade-down m-0">
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 -->
-                <a href="contact.html" class="nav-item nav-link">ติดต่อเรา</a>
+                <a href="{% url 'contact' %}" class="nav-item nav-link">ติดต่อเรา</a>
             </div>
             <!--<a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Join Now<i class="fa fa-arrow-right ms-3"></i></a>
             -->
@@ -148,7 +148,7 @@
                     <h4 class="text-white mb-3">ลิงค์ภายใน</h4>
                     <a class="btn btn-link" href="{% url 'about' %}">เกี่ยวกับเรา</a>
                     <a class="btn btn-link" href="{% url 'contact' %}">ติดต่อเรา</a>
-                    <a class="btn btn-link" href="">บทความ</a>
+                    <a class="btn btn-link" href="{% url 'home' %}">บทความ</a>
                     <!--<a class="btn btn-link" href="">วิสัยทัศน์พันธกิจ</a>-->
                     <a class="btn btn-link" href="#">คำถามบ่อย</a>
                 </div>
