--- a/templates/base.html
+++ b/templates/base.html
@@ -35,26 +35,7 @@
     <!-- Template Stylesheet -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <style>
-        nav form {
-            font-family: sans-serif;
-        }
-
-        nav a {
-            font-family: sans-serif;
-        }
-
-        .container {
-            font-family: sans-serif;
-        }
-
-        .container div,
-        h1 {
-            font-family: sans-serif;
-            font-weight: 600;
-        }
-
-
-
+       
         .pagination>li>a {
             background-color: white;
             color: #5A4181;
@@ -113,7 +94,7 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="{% url 'index' %}" class="nav-item nav-link active">หน้าหลัก</a>
                 <a href="{% url 'about' %}" class="nav-item nav-link">เกี่ยวกับเรา</a>
-                <a href="{% url 'home' %}" class="nav-item nav-link">การเลี้ยงลูกด้วยนมแม่</a>
+                <a href="{% url 'post_list' %}" class="nav-item nav-link">การเลี้ยงลูกด้วยนมแม่</a>
                 <!--<div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu fade-down m-0">
@@ -136,9 +117,16 @@
         
     {% endblock post %}
     
-
-
-
+    
+    {% block form %}
+        
+    {% endblock form %}
+            
+    {% block detail %}
+        
+    {% endblock detail %}
+        
+    
 
      <!-- Footer Start -->
      <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
@@ -148,9 +136,9 @@
                     <h4 class="text-white mb-3">ลิงค์ภายใน</h4>
                     <a class="btn btn-link" href="{% url 'about' %}">เกี่ยวกับเรา</a>
                     <a class="btn btn-link" href="{% url 'contact' %}">ติดต่อเรา</a>
-                    <a class="btn btn-link" href="{% url 'home' %}">บทความ</a>
-                    <!--<a class="btn btn-link" href="">วิสัยทัศน์พันธกิจ</a>-->
-                    <a class="btn btn-link" href="#">คำถามบ่อย</a>
+                    <a class="btn btn-link" href="{% url 'post_list' %}">บทความ</a>
+                    <!--<a class="btn btn-link" href="">วิสัยทัศน์พันธกิจ</a>
+                    <a class="btn btn-link" href="#">คำถามบ่อย</a>-->
                 </div>
                 <div class="col-lg-6 col-md-6">
                     <h4 class="text-white mb-3">ติดต่อเรา</h4>
