--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="{% url 'index' %}" class="nav-item nav-link active">หน้าหลัก</a>
                 <a href="{% url 'about' %}" class="nav-item nav-link">เกี่ยวกับเรา</a>
-                <a href="{% url 'home' %}" class="nav-item nav-link">การเลี้ยงลูกด้วยนมแม่</a>
+                <a href="{% url 'post_list' %}" class="nav-item nav-link">การเลี้ยงลูกด้วยนมแม่</a>
                 <!--<div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu fade-down m-0">
@@ -507,7 +507,7 @@
                     <h4 class="text-white mb-3">ลิงค์ภายใน</h4>
                     <a class="btn btn-link" href="{% url 'about' %}">เกี่ยวกับเรา</a>
                     <a class="btn btn-link" href="{% url 'contact' %}">ติดต่อเรา</a>
-                    <a class="btn btn-link" href="{% url 'home' %}">บทความ</a>
+                    <a class="btn btn-link" href="{% url 'post_list' %}">บทความ</a>
                     <!--<a class="btn btn-link" href="">วิสัยทัศน์พันธกิจ</a>
                     <a class="btn btn-link" href="">คำถามบ่อย</a>-->
                 </div>
