--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -11,5 +11,41 @@
         by {{ post.published_date }}  </li>
     {% endfor %}
 </ul>
+
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+            <h6 class="section-title bg-white text-center text-primary px-3">หมวดหมู่</h6>
+            <h1 class="mb-5">ยอดนิยม</h1>
+        </div>
+
+        
+        {% for post in posts %}
+            
+                   
+        <div class="row g-4 justify-content-center">
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="course-item bg-light">
+                    <div class="position-relative overflow-hidden">
+                        <img class="img-fluid" src="{{post.post_image.url}}" alt="">
+
+                    </div>
+                    <div class="text-center p-4 pb-0">
+                        
+                        <h5 class="mb-4"><a href="{% url 'post_detail' post.pk %}">{{ post.post_title }}</a></h5>
+                    </div>
+                    <div class="d-flex border-top">
+                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>John Doe</small>
+                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>1.49 Hrs</small>
+                        <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>30 Students</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Courses End -->
+{% endfor %}
+
 {% endblock post %}
     
