--- a/templates/index.html
+++ b/templates/index.html
@@ -113,6 +113,9 @@
     </div>
     <!-- Carousel End -->
 
+    <div class="container">
+        <h3 class="mb-3">จำนวนผู้ชม : {{num_visits}}</h3>
+    </div>
 
     <!-- Service Start -->
     <div class="container-xxl py-5">
